fixed the scrolling arriving position for desktop items navbar and fixed the dark mode colors of active icons in mobile navbar

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -12,6 +12,21 @@
     padding: 4px;
 }
 
+.dark {
+  .active-desktop {
+    border-bottom: 2px solid #FFFAF2;
+    padding-bottom: 5px;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  .active-mobile > svg {
+    stroke: #2c2c2c;
+    background-color: #FFFAF2;
+    border-radius: 50%;
+    padding: 4px;
+  }
+}
+
 @-moz-document url-prefix() {
   #fixed-mobile-navbar {
     position: fixed;
